--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,5 @@ background-color: rgb(250, 250, 250);
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
