--- a/src/components/Chart/chart.module.css
+++ b/src/components/Chart/chart.module.css
@@ -2,5 +2,6 @@
     display: flex;
     justify-content: center;
     width: 85%;
-    margin-top: 50px;
+    margin-top: 20px;
+    margin-bottom: 30px
 }
