--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,9 @@ background-image: repeating-radial-gradient(white, lightgray);
   justify-content: center;
   flex-direction: column;
 }
+
+.image {
+  width: 370px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
