--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,17 @@ background-color: #f5f6f5;
   justify-content: center;
   flex-direction: column;
 }
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
 
 .image {
   width: 370px;
+  align-items: center;
+  justify-content: center;
   margin-top: 50px;
   margin-bottom: 50px;
 }
@@ -23,4 +31,11 @@ background-color: #f5f6f5;
   .image {
     width: 100%;
   }
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
