--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-background-color: #f5f6f5;
+background-color: rgba(250, 250, 250);
 }
 
 .container {
@@ -8,13 +8,13 @@ background-color: #f5f6f5;
   justify-content: center;
   flex-direction: column;
 }
-.header {
+
+.image-container {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
 }
-
 .image {
   width: 370px;
   align-items: center;
@@ -34,8 +34,5 @@ background-color: #f5f6f5;
 }
 
 .footer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
+  margin-left: 5px;
 }
