--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -1,11 +1,17 @@
 .header.container {
-    display: flex;
-  
+     display: flex;
+     justify-content: space-between;
 
 }
 .logo {
     font-size: 50px;
     font-weight: 500;
-    color: aquamarine;
 }
 
+.zone {
+    max-width: 100px;
+    height: auto;
+    margin: 20px auto;
+    border-radius: 50%;
+    margin-left: 200px;
+}
