--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -1,7 +1,7 @@
 .header.container {
      display: flex;
      justify-content: space-between;
-
+     position: relative;
 }
 .logo {
     font-size: 50px;
@@ -14,4 +14,6 @@
     margin: 20px auto;
     border-radius: 50%;
     margin-left: 200px;
+    padding: 10px;
+    position: sticky;
 }
