--- a/src/index.css
+++ b/src/index.css
@@ -34,5 +34,7 @@ background-color: rgba(250, 250, 250);
 }
 
 .footer {
-  padding: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
