--- a/src/components/News/news.module.css
+++ b/src/components/News/news.module.css
@@ -3,8 +3,16 @@
     align-items: center;
     flex-direction: column;
     max-width: 345 !important;
+    padding: 5px;
 }
 .media {
     max-width: 250px;
     height: 140;
+}
+.mainContainer {
+    margin: 50px 0;
+}
+
+.header {
+   
 }
