--- a/src/components/News/news.module.css
+++ b/src/components/News/news.module.css
@@ -10,9 +10,12 @@
     height: 140;
 }
 .mainContainer {
-    margin: 50px 0;
+    width: 50%;
+    align-items: center;
+    justify-content: center;
+    padding: 10px 50px;
 }
 
 .header {
-   
+   align-items: center;
 }
